# 3d-kinect-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.xml  intrinsicKinect.xml
cmake/: FindFreenect.cmake  FindLibusb.cmake
include/: VolumeIntegration.cuh  calibration.hpp  icp_wrapper.hpp  kinect.hpp  marching_cubes.hpp  ncurses_3dscanner.hpp
rviz_plugin/src/: CMakeLists.txt  kinect_scanner_plugin.xml  package.xml
rviz_plugin/src/include/: VolumeIntegration.cuh  kinectScannerPlugin.hpp
rviz_plugin/src/src/: VolumeIntegration.cu  calibration.cpp  kinectScannerPlugin.cpp  marching_cubes.cpp
src/: VolumeIntegration.cu  main.cu
